--- a/templates/poll/pages/index.html
+++ b/templates/poll/pages/index.html
@@ -1,16 +1,1 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href={% static "global/css/styles.css" %}>
-  <title>Document</title>
-</head>
-
-<body>
-  <h1>INDEX</h1>
-</body>
-
-</html>
+{% extends "global/base.html" %}
