--- a/poll/templates/poll/pages/index.html
+++ b/poll/templates/poll/pages/index.html
@@ -4,7 +4,7 @@
 <div class="results">
   <table class="results-table">
     <caption class="table-caption">
-      INDEX
+        Resultados
     </caption>
 
     <thead>
