--- a/poll/templates/poll/pages/index.html
+++ b/poll/templates/poll/pages/index.html
@@ -4,7 +4,7 @@
 <div class="results">
   <table class="results-table">
     <caption class="table-caption">
-        Resultados
+      Resultados
     </caption>
 
     <thead>
@@ -16,101 +16,19 @@
     </thead>
 
     <tbody>
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Aliança_Democrática_2024_(Portugal)_logo.png" %}" alt="Aliança Democrática logo">
-        </td>
-        <td class="table-cel">
-          Aliança Democrática
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Partido_Socialista_(Portugal).png" %}" alt="Partido Socialista logo">
-        </td>
-        <td class="table-cel">
-          Partido Socialista
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Símbolo_principal_do_CHEGA.png" %}" alt="Chega logo">
-        </td>
-        <td class="table-cel">
-          Chega
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global/img/Iniciativa_Liberal_Icon.png" %}" alt="Iniciativa Liberal logo">
-        </td>
-        <td class="table-cel">
-          Iniciativa Liberal
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Logo_Bloco_de_Esquerda.png" %}" alt="Bloco de Esquerda logo">
-        </td>
-        <td class="table-cel">
-          Bloco de Esquerda
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Símbolo_CDU_(PCP-PEV)_(Letras).png" %}" alt="Coligação Democrática Unitária logo">
-        </td>
-        <td class="table-cel">
-          Coligação Democrática Unitária
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Partido_LIVRE_logo.png" %}" alt="Livre logo">
-        </td>
-        <td class="table-cel">
-          Livre
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
-
-      <tr class="table-row">
-        <td class="table-cel">
-          <img src="{% static "global\img\Logo_Pessoas-Animais-Natureza.png" %}" alt="Pessoas-Animais-Natureza logo">
-        </td>
-        <td class="table-cel">
-          Pessoas-Animais-Natureza
-        </td>
-        <td class="table-cel">
-          0
-        </td>
-      </tr>
+      {% for party in poll %}
+        <tr class="table-row">
+          <td class="table-cel">
+            <img src="{{ party.icon.url }}" alt="{{ party.name }} logo">
+          </td>
+          <td class="table-cel">
+            {{ party.name }}
+          </td>
+          <td class="table-cel">
+            {{ party.votes }}
+          </td>
+        </tr>
+      {% endfor %}
     </tbody>
   </table>
 </div>
